# bapwip

./: .gitignore  pyproject.toml  shell.nix
bapwip/: __main__.py  icons.py  ui.py
bapwip/assets/colorschemes/: Anthracite.json  TrojanBlue.json
