[project]
name = "bapwip"
version = "0.0.1"
description = "Basic audio player, written in Python"
authors = [
    {name = "Simone Gentili",email = "gensimone.git@gmail.com"}
]
license = {text = "MIT"}
readme = "README"
requires-python = ">=3.12"
dependencies = [
    "customtkinter",
    "pillow",
    "mpv"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
